feat: update list to set